syntax = "proto3";

option csharp_namespace = "Orbit.Shared.Proto";

package Orbit.Shared;

import "google/protobuf/timestamp.proto";
import "orbit/shared/node.proto";

message AddressableReferenceProto {
    string type = 1;
    AddressableKeyProto key = 2;
}

message AddressableKeyProto {
    oneof key {
        int32 int32Key = 1;
        int64 int64Key = 2;
        string stringKey = 3;
        bool noKey = 4;
    }
}

message AddressableLeaseProto {
    NodeIdProto nodeId = 1;
    AddressableReferenceProto reference = 2;
    google.protobuf.Timestamp renew_at = 3;
    google.protobuf.Timestamp expires_at = 4;
}

message NamespacedAddressableReferenceProto {
    string namespace = 1;
    AddressableReferenceProto addressableReference = 2;
}